# template-project-python

./: .gitignore  .pre-commit-config.yml  LICENSE  Makefile  README.md  mkdocks.yml  pyproject.toml  tox.ini  update.py
.#github/workflows/: tests.yml
.github/workflow/: tests.yml
tests/: test_template_project_python.txt
